lavorato su ruolo dipendente: visualizza conversazione dopo la semplicazione